# VoxFlow

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.agent-os/: AGENTS.md  MEMORY.md  SOUL.md  USER.md  WORKING.md
.agent-os/skills/memory-maintenance/: SKILL.md
.agent-os/skills/prompt-assembly/: SKILL.md
crates/vf-agent-os/: Cargo.toml
crates/vf-agent-os/src/: context.rs  lib.rs  memory.rs  prompt.rs  session.rs  skill.rs
crates/vf-asr/: Cargo.toml
crates/vf-asr/src/: backend.rs  cloud.rs  error.rs  lib.rs  voxnexus.rs  wav.rs
crates/vf-audio/: Cargo.toml
crates/vf-audio/src/: capture.rs  error.rs  lib.rs  resampler.rs
crates/vf-config/: Cargo.toml
crates/vf-config/src/: lib.rs  profile.rs  settings.rs
crates/vf-core/: Cargo.toml
crates/vf-core/src/: engine.rs  error.rs  lib.rs  state.rs
crates/vf-inject/: Cargo.toml
crates/vf-inject/src/: error.rs  injector.rs  lib.rs
scripts/: build-macos-release.sh
src/: index.html  overlay.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  lib.rs  main.rs  overlay.rs  permissions.rs  platform_hotkey.rs
