[workspace]
resolver = "2"
members = [
    "crates/vf-agent-os",
    "crates/vf-audio",
    "crates/vf-asr",
    "crates/vf-inject",
    "crates/vf-config",
    "crates/vf-core",
    "src-tauri",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
