[package]
name = "vf-asr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
